# ckb-multisig-demo

./: .gitignore  .gitmodules  Cargo.toml  README.md  capsule.toml  deployment.toml  rust_multisig.pptx
contracts/ckb-multisig-demo/: Cargo.toml
contracts/ckb-multisig-demo/ckb-lib-secp256k1/: secp256k1_blake2b.c
contracts/ckb-multisig-demo/src/: entry.rs  error.rs  main.rs  secp256k1_helper.rs
orig-tests/: Cargo.toml  build.rs
orig-tests/src/: lib.rs
tests/src/: tests.rs
