[package]
name = "ckb-multisig-demo-tests"
version = "0.5.4"
authors = ["Nervos Core Dev <dev@nervos.org>"]
edition = "2018"
license = "MIT"
description = "CKB System Scripts"
repository = "https://github.com/nervosnetwork/ckb-system-scripts"
include = ["src/**/*", "Cargo.toml", "build.rs", "specs/cells/*"]

[dependencies]
includedir = "0.6"
phf = "0.8"
ckb-types = { git = "https://github.com/nervosnetwork/ckb.git", rev = "d75e4c5" }
ckb-script = { git = "https://github.com/nervosnetwork/ckb.git", rev = "d75e4c5" }
ckb-crypto = { git = "https://github.com/nervosnetwork/ckb.git", rev = "d75e4c5" }
ckb-hash = { git = "https://github.com/nervosnetwork/ckb.git", rev = "d75e4c5" }
ckb-error = { git = "https://github.com/nervosnetwork/ckb.git", rev = "d75e4c5" }
lazy_static = "1.3.0"
rand = "0.7"
faster-hex = "0.6.0"

[build-dependencies]
includedir_codegen = "0.6"
blake2b-rs = "0.2"
faster-hex = "0.6.0"

[dev-dependencies]
byteorder = "1.3.1"
ckb-dao-utils = { git = "https://github.com/nervosnetwork/ckb.git", rev = "d75e4c5" }

ripemd160 = "0.8.0"
sha2 = "0.8.0"
secp256k1 = { version = "0.15.1" }
